# rubik-solver

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
include/: color.hpp  cross.hpp  cube.hpp  cube_algorithms.hpp  cube_storage.hpp  fridrich_PLL.hpp  fridrich_solver.hpp  m2_edges.hpp  method.hpp  old_pochmann_blind_solver.hpp  old_pochmann_corners.hpp  old_pochmann_edges.hpp  old_pochmann_m2_blind_solver.hpp  old_pochmann_m2_solver.hpp  old_pochmann_solver.hpp  orientator.hpp  solver.hpp  storage.hpp  utilities.hpp
source/: cross.cpp  cube.cpp  m2_edges.cpp  main.cpp  old_pochmann_blind_solver.cpp  old_pochmann_corners.cpp  old_pochmann_edges.cpp  old_pochmann_m2_blind_solver.cpp  old_pochmann_m2_solver.cpp  old_pochmann_solver.cpp  utilities.cpp
tests/: CMakeLists.txt  debug.cpp  unit_tests.cpp
